# ngumpulin-backend

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.airflow  Dockerfile.fastapi  Dockerfile.mlflow  README.md  __init__.py  docker-compose.yaml  pyproject.toml
airflow/: pyproject.toml
airflow/dags/: ml_pipeline_dag.py
airflow/plugins/: __init__.py  mlflow_plugin.py
app/: main.py  pyproject.toml
app/api/: health.py
app/core/: config.py  exceptions.py
app/routers/: agent.py  upload.py
app/services/: example.py  mlflow_tracking.py
app/utils/: logger.py  metrics.py
mlflow/: pyproject.toml
monitoring/grafana/: grafana.ini
monitoring/grafana/dashboards/: api-dashboard.json  ml_pipeline.json
monitoring/grafana/provisioning/dashboards/: dashboard.yaml  fastapi_dashboard.json  services.json
monitoring/grafana/provisioning/datasources/: alert_rules.yaml  mlflow.yaml  prometheus.yaml
monitoring/prometheus/: alert_rules.yaml  mlflow_exporter.py  prometheus.yaml
notebook/: Agentic-ai.ipynb  Pickle_Model.ipynb
scripts/: airflow-entrypoint.sh  backup.sh  cleanup.sh  dependencies.sh  docker.sh  fastapi-entrypoint.sh  init-postgresql.sh  mlflow-entrypoint.sh  setup.sh
