[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "airflow-service"
version = "0.1.0"
description = "Airflow service for workflow orchestration"
dependencies = [
    "apache-airflow>=2.7.0,<3.0.0",
    "apache-airflow-providers-postgres>=5.7.0",
    "flask-appbuilder>=4.3.0",
    "psycopg2-binary>=2.9.9",
    "sqlalchemy>=1.4.49,<2.0",
    "python-dotenv>=1.0.0",
    "mlflow>=2.8.0",
    "pandas>=2.1.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    "optuna>=3.3.0",
    "supabase>=2.0.0"
]
requires-python = ">=3.11"
license = {text = "MIT"}

[tool.hatch.build.targets.wheel]
packages = ["airflow"] 