[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ngumpulin-backend"
version = "0.1.0"
description = "Backend for Ngumpulin project"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.24.0",
    "supabase>=2.0.0",
    "langchain>=0.1.0",
    "langchain-community>=0.0.10",
    "langchain-pinecone>=0.0.3",
    "pinecone>=3.0.0",
    "gliner>=0.1.0",
    "python-dotenv>=1.0.0",
    "scikit-learn>=1.3.0",
    "pandas>=2.1.0",
    "numpy>=1.24.0",
    "prometheus-fastapi-instrumentator>=6.1.0",
    "prometheus-client>=0.19.0",
    "pydantic>=2.5.0",
    "python-multipart>=0.0.6",
    "aiofiles>=23.2.1",
    "structlog>=23.1.0",
    "requests>=2.31.0",
    "pydantic-settings>=2.0.0",
    "langgraph>=0.0.10",
    "langchain-groq>=0.0.1",
    "typing-extensions>=4.8.0",
    "optuna>=3.3.0",
    "torch>=2.1.0",
    "tqdm>=4.66.0",
    "certifi>=2023.11.17",
    "mlflow>=2.8.0"
]
license = {text = "MIT"}

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/*" = ["S101"] 